# zenith-db

./: .gitignore  :w  CMakeLists.txt  CMakePresets.json  vcpkg.json
internal/async/: thread_pool.cpp  thread_pool.h
internal/logger/: logger.cpp  logger.h
internal/networking/: socket.cpp  socket.h
internal/queue/: safe_queue.h
internal/values/: value_object.cpp  value_object.h
src/: main.cpp
tests/: safe_queue_test.cpp  thread_pool_test.cpp
